--- a/Integ/templates/hd.html
+++ b/Integ/templates/hd.html
@@ -1,9 +1,11 @@
+{%load static%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diopter Test</title>
+    <link rel = "stylesheet" href = "{%static 'styl.css'%}">
     <style>
         .sentence {
             margin: 10px 0;
@@ -12,6 +14,9 @@
     </style>
 </head>
 <body>
+    <div class="navbar">
+        <h1>HD PAGE</h1>
+    </div>
     <h1>Eye Test - Select the Line You Can Read</h1>
 
     <div>
