--- a/Integ/templates/diopter_result.html
+++ b/Integ/templates/diopter_result.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Diopter Test Result</title>
     <link rel="stylesheet" href="sty.css">
+    <
     <style>
         body {
             display: flex;
@@ -13,7 +15,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background: url('selective-myopia-2084175_1920.jpg') no-repeat center center/cover;
+            background: url("{% static 'selective-myopia-2084175_1920.jpg'%}") no-repeat center center/cover;
             transition: opacity 0.5s ease-in-out;
             opacity: 0.5;
         }
