--- a/Integ/templates/2k.html
+++ b/Integ/templates/2k.html
@@ -16,7 +16,7 @@
         <h1>2K PAGE</h1>
     </div>
     <div class="scroll-animation">
-        <img src="Page 42.gif" alt="Scroll Down Animation">
+        <img src="{% static 'Page 42 copy.gif'%}" alt="Scroll Down Animation">
     </div>
 
 <div style="display: flex; flex-direction: column; align-items: center;">
