--- a/Integ/templates/hd.html
+++ b/Integ/templates/hd.html
@@ -18,6 +18,9 @@
         <h1>HD PAGE</h1>
     </div>
     <h1>Eye Test - Select the Line You Can Read</h1>
+    <div class="scroll-animation">
+        <img src="{% static 'Page 42 copy.gif' %}" alt="Scroll Down Animation">
+    </div>
 
     <div>
         <p class="sentence" style="font-size: 322px;text-align: center;">E</p>
