--- a/Integ/templates/4K.html
+++ b/Integ/templates/4K.html
@@ -14,7 +14,7 @@
     <div class="navbar">
         <h1>4K PAGE</h1>
     </div>
-    
+    <h2>Select the Line upto You can Read</h2>
   
     <div class="scroll-animation">
         <img src="{% static 'Page 42 copy.gif' %}" alt="Scroll Down Animation">
@@ -102,8 +102,8 @@
     
       <label for="distance">Select the distance:</label>
       <select name="distance" required>
-          <option value="25cm">25 cm (Hypermetropia)</option>
           <option value="3m">3 meters (Myopia)</option>
+          <option value="25cm">25 cm (Hypermetropia)</option>
       </select>
     
       <button type="submit">Get Diopter Value</button>
