--- a/Integ/templates/hd.html
+++ b/Integ/templates/hd.html
@@ -17,7 +17,7 @@
     <div class="navbar">
         <h1>HD PAGE</h1>
     </div>
-    <h1>Eye Test - Select the Line You Can Read</h1>
+    <h1>Eye Test - Select the Line upto You Can Read</h1>
     <div class="scroll-animation">
         <img src="{% static 'Page 42 copy.gif' %}" alt="Scroll Down Animation">
     </div>
@@ -48,8 +48,8 @@
 
         <label for="distance">Select the distance:</label>
         <select name="distance" required>
-            <option value="25cm">25 cm (Hypermetropia)</option>
             <option value="3m">3 meters (Myopia)</option>
+            <option value="25cm">25 cm (Hypermetropia)</option>
         </select>
 
         <button type="submit">Get Diopter Value</button>
