--- a/Integ/templates/hd.html
+++ b/Integ/templates/hd.html
@@ -23,7 +23,7 @@
     </div>
 
     <div>
-        <p>1st</p> <p class="sentence" style="font-size: 322px;text-align: center;">E</p>
+        <p class="sentence" style="font-size: 322px;text-align: center;">E</p>
         <p class="sentence" style="font-size: 299px;text-align: center;">F P</p>
         <p class="sentence" style="font-size: 276px;text-align: center;">T O Z</p>
         <p class="sentence" style="font-size: 252px;text-align: center;">E L D P</p>
